Sat Mar  5 18:06:21 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* dir.c (fnmatch): removed unnecessary code. (ruby_1_8 didn't have
	  String#clear, so [ruby-dev:24749] didn't affect it)

	* win32/win32.c (NtInitialize): ditto. (by numeric.c 1.101.2.14)

Sat Mar  5 16:29:26 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/multi-tk.rb: freeze callback-entry objects

	* ext/tk/lib/tkextlib/tile.rb: support tile-0.6

Fri Mar  4 19:39:28 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/parsers/parse_c.rb (RDoc::C_Parser#do_includes): replace
	  also locally defined modules.

	* ext/iconv/iconv.c: backport Iconv::InvalidEncoding from CVS HEAD.

	* ext/strscan/strscan.c: moved misplaced rdoc.

Fri Mar  4 11:17:06 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tcltklib/tcltklib.c (ip_rbUpdateCommand): get rid of
	  warnings with Tcl/Tk 8.3 or former (backport from CVS_HEAD).

	* ext/tcltklib/tcltklib.c (ip_rb_threadUpdateCommand): ditto.

Fri Mar  4 10:15:30 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/set.rb (SortedSet::setup): a hack to shut up warning.
	  [ruby-talk:132866]

Thu Mar  4 07:07:00 2005  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf/nkf-utf8/nkf.c: follow nkf 1.63

Thu Mar  3 23:49:00 2005  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf/nkf-utf8/nkf.c: follow nkf 1.62

Thu Mar  3 11:49:51 2005  Kouhei Sutou  <kou@cozmixng.org>

	* sample/rss/tdiary_plugin/rss-recent.rb: added site information.

Wed Mar  2 19:53:07 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (parse_args): add DESTDIR only when not directed
	  already.  fixed: [ruby-dev:25781]

Wed Mar  2 17:14:18 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tcltklib/tcltklib.c (lib_eventloop_core): fix typo

Wed Mar  2 16:00:02 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tcltklib/tcltklib.c: enforce thread-check and exception-handling
	  to avoid SEGV trouble.